2007-05-14  Srinivasa Ragavan <sragavan@novell.com>

	** NEWS, configure.in: Evolution exchange 2.11.2 release

2007-04-27  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/Makefile.am:
	Add a CLEANFILES rule to remove a schema file.  (#433967)

2007-04-27  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-journal.c:
	* camel/camel-exchange-folder.c:
	* camel/camel-exchange-provider.c:
	* camel/camel-exchange-transport.c:
	* camel/camel-exchange-store.c:
	* camel/camel-stub.c:
	Use GLib's i18n support instead of Camel's.  (#418852)

2007-02-23  Srinivasa Ragavan <sragavan@novell.com>

	** NEWS, configure.in: Evolution exchange 2.11.1 release

2007-04-19  Veerapuram Varadhan  <vvaradhan@novell.com>

	* MAINTAINERS: Added component maintainers.
	
2007-04-05  Matthew Barnes  <mbarnes@redhat.com>

	* storage/exchange-config-listener.c (class_init):
	* storage/exchange-component.c (exchange_component_class_init):
	Use GLib marshallers wherever possible.

2007-03-29  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-journal.c:
	* camel/camel-exchange-folder.c:
	* camel/camel-stub-marshal.c:
	* camel/camel-exchange-store.c:
	* camel/camel-stub.c:
	* mail/mail-utils.c:
	* mail/mail-utils.h:
	* mail/mail-stub-exchange.c:
	* mail/mail-stub.c:
	* addressbook/e-book-backend-exchange.c:
	* addressbook/e-book-backend-gal.c:
	* calendar/e-cal-backend-exchange.c:
	* calendar/e-cal-backend-exchange-tasks.c:
	* calendar/e-cal-backend-exchange-calendar.c:
	Fix all compiler warnings (#405916).

2007-03-27  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/e-book-backend-gal.c:
	* calendar/e-cal-backend-exchange-calendar.c:
	* calendar/e-cal-backend-exchange.c:
	* camel/camel-exchange-store.c:
	* mail/mail-stub-exchange:
	* storage/exchange-component.c:
	* storage/exchange-config-listener.c:
	Don't mix declarations and code (#405495).

2007-03-26  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Fix the bug-report address in AC_INIT (#363283).