@@ -1,3 +1,9 @@
+2007-05-19  Matthew Barnes  <mbarnes@redhat.com>
+
+	* camel/camel-exchange-folder.c:
+	* storage/exchange-migrate.c:
+	Use g_mkdir_with_parents() instead of e_util_mkdir_hier().  (#439579)
+
 2007-05-14  Srinivasa Ragavan <sragavan@novell.com>
 
 	** NEWS, configure.in: Evolution exchange 2.11.2 release
